--- a/client/todo/package.json
+++ b/client/todo/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.3",
     "@rnvf/id-generator": "*",
     "@tailwindcss/forms": "^0.5.3",
     "vue": "^3.2.41"
