--- a/client/todo/package.json
+++ b/client/todo/package.json
@@ -12,6 +12,7 @@
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@rnvf/id-generator": "*",
     "@tailwindcss/forms": "^0.5.3",
+    "replicache": "^11.2.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
