--- a/services/nginx/conf.d/default.conf
+++ b/services/nginx/conf.d/default.conf
@@ -23,4 +23,8 @@ server {
   location /api {
     proxy_pass http://host.docker.internal:3000;
   }
+  
+  location /documentation {
+    proxy_pass http://host.docker.internal:3000;
+  }
 }
