--- a/client/todo/package.json
+++ b/client/todo/package.json
@@ -12,7 +12,9 @@
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@rnvf/id-generator": "*",
     "@tailwindcss/forms": "^0.5.3",
+    "@vueuse/core": "^9.4.0",
     "replicache": "^11.2.0",
+    "socket.io-client": "^4.5.3",
     "vue": "^3.2.41"
   },
   "devDependencies": {
